// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kʼɪŋ siːz ðə wulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgs siː ðə wulhs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kʼɪŋ wɔkʼɪŋz ætʼ ðə rɪvər",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kʼɪŋ nat siːz ðə wulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "reːgeː βideret lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kaneːi βiderent lupuium",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "reːgeː ambulareːt flumeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "reːgeː non βideret lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "sewi lukin soːweli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "soːsoːweli lukin soːsoːweli",
    },
    {
      "english": "i give you the bread",
      "target": "mi kana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "sewi kawa saki kelo",
    },
    {
      "english": "the king does not see the wolf",
      "target": "sewi ala lukin soːweli",
    },
  ],
  "preset": "tokipona",
}
`;
